<resources>
    <string name="app_name">Calcul Mental</string>
    <string name="text_bouton_jouer">Jouer</string>
    <string name="text_bouton_scores">Meilleurs Scores</string>
    <string name="text_bouton_apropos">À propos</string>
    <string name="text_bouton_home">Retour Menu</string>
    <string name="text_podium"> Podium </string>
    <string name="text_score">Score :</string>
    <string name="text_vies">Vies :</string>
    <string name="text_bouton_0" translatable="false">0</string>
    <string name="text_bouton_1" translatable="false">1</string>
    <string name="text_bouton_2" translatable="false">2</string>
    <string name="text_bouton_3" translatable="false">3</string>
    <string name="text_bouton_4" translatable="false">4</string>
    <string name="text_bouton_5" translatable="false">5</string>
    <string name="text_bouton_6" translatable="false">6</string>
    <string name="text_bouton_7" translatable="false">7</string>
    <string name="text_bouton_8" translatable="false">8</string>
    <string name="text_bouton_9" translatable="false">9</string>
    <string name="ERROR_NUMBER_TOO_HIGH"> Le nombre est trop grand !</string>
    <string name="text_input_name"> Saisissez votre nom :</string>
    <string name="text_save"> Sauvegarder </string>
    <string name="text_view_score"> Votre score est de : </string>
    <string name="text_title_name"> Créé par : </string>
    <string name="text_name1" translatable="false"> Claire Viguoine </string>
    <string name="text_name2" translatable="false"> Victor Guenez-Charles </string>

</resources>