<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontalLayout">

        <Button
            android:id="@+id/button_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/white"
            android:text="@string/text_save" />

        <Button
            android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:text="@string/text_view_score" />

        <Button
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:backgroundTint="@color/purple_200"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:text="@string/text_input_name" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_apropos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            android:text="@string/text_bouton_apropos" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
